--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -148,7 +148,9 @@ body {
 	font-family: Helvetica;
 	box-shadow: 10px 10px 8px #10101010;
 	padding: 0px 25px;
-	opacity: 0,6;
+}
+.News_table table{
+	opacity: 0,2;
 }
 
 .news_body{
