--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -28,7 +28,7 @@ body {
     text-align: center;
     padding: 12px;
     color: white;
-    text-decoration: none;
+    text-decoration: none !important;
     font-size: 17px;
   }
   
