--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -317,6 +317,7 @@ body {font-family: Verdana, sans-serif;}
 img {vertical-align: middle;}
 
 .slideshow-container {
+	z-index: 999;
   max-width: 1000px;
   position: relative;
   margin: auto;
