--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -317,12 +317,13 @@ body {font-family: Verdana, sans-serif;}
 img {vertical-align: middle;}
 
 .slideshow-container {
-	z-index: -2;
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
-
+.mySlides{
+	z-index: -2;
+}
 .text {
   color: #f2f2f2;
   font-size: 15px;
