--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -308,18 +308,6 @@
 	border-radius: 600%;
 }
 
-* {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
-.mySlides {display: none;}
-img {vertical-align: middle;}
-
-.slideshow-container {
-	z-index: -2;
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
 .text {
   color: #f2f2f2;
   font-size: 15px;
@@ -384,9 +372,12 @@ img {vertical-align: middle;}
   margin: auto;
 }
 
+.slideshow-photo{
+	z-index: -2;
+}
+
 /* Next & previous buttons */
 .prev, .next {
-	z-index: 100 !important;
   cursor: pointer;
   position: absolute;
   top: 50%;
