--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -373,3 +373,9 @@
 	  display: none; 
 	}
 }
+.Calendarios{
+	background-image: url("https://tse1.mm.bing.net/th?id=OIP.s0nb0d0o_umvOfGqAPwqwgHaEK&pid=Api&P=0");
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
+    position: relative !important;
+}
