--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -141,6 +141,15 @@
 	border-radius: 20px;
 }
 
+.Game_table{
+	width:100%;
+	height:100%;
+	border-collapse: collapse;
+	text-align: center;
+	font-family: Helvetica;
+	box-shadow: 10px 10px 8px #10101010;
+}
+
 .News_table table, th, td{
 	background-color: rgba(255, 255, 255, 0);
 	width: 32%;
