--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -142,8 +142,8 @@
 }
 
 .Game_table{
-	width:90%;
-	height:90%;
+	width: 100px;%;
+	height: 100px;%;
 	border-collapse: collapse;
 	text-align: center;
 	font-family: Helvetica;
