--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -142,8 +142,8 @@
 }
 
 .Game_table{
-	width: 100px;%;
-	height: 100px;%;
+	width: 100%;
+	height: 100%;
 	border-collapse: collapse;
 	text-align: center;
 	font-family: Helvetica;
