--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -16,39 +16,55 @@
     border-radius: 2px;
     width: 50%;
 }
+/* Navbar */
 .navbar {
-    width: 100%;
-    background-color: #555;
-    overflow: auto;
+	background-color: #555;
+	overflow: hidden;
   }
   
   /* Navbar links */
   .navbar a {
-    float: left;
-    text-align: center;
-    padding: 12px;
-    color: white;
-    text-decoration: none;
-    font-size: 17px;
+	float: left;
+	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
   }
   
   /* Navbar links on mouse-over */
   .navbar a:hover {
-    background-color: #000;
+	background-color: #000;
   }
   
-  /* Current/active navbar link */
+  /* Active/current navbar link */
   .active {
-    background-color: #04AA6D;
+	background-color: #04AA6D;
   }
   
-  /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
-  @media screen and (max-width: 500px) {
-    .navbar a {
-      float: none;
-      display: block;
-    }
-}
+  /* Responsive navbar */
+  @media screen and (max-width: 600px) {
+	.navbar a:not(:first-child) {display: none;}
+	.navbar a.icon {
+	  float: right;
+	  display: block;
+	}
+  }
+  
+  @media screen and (max-width: 600px) {
+	.navbar.responsive {position: relative;}
+	.navbar.responsive a.icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	.navbar.responsive a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	}
+  }
+  
 .Explanations{
 	background-image: url("https://wallpaperaccess.com/full/3457485.jpg");
 	background-repeat: no-repeat;
