--- a/StyleSchool.css
+++ b/StyleSchool.css
@@ -17,9 +17,11 @@
     width: 50%;
 }
 /* Navbar */
+/* Navbar */
 .navbar {
 	background-color: #555;
 	overflow: hidden;
+	height: 60px; /* Altura fija para la barra de navegación */
   }
   
   /* Navbar links */
@@ -49,22 +51,37 @@
 	  float: right;
 	  display: block;
 	}
-  }
-  
-  @media screen and (max-width: 600px) {
-	.navbar.responsive {position: relative;}
-	.navbar.responsive a.icon {
+	
+	/* Agrega una clase "responsive" para mostrar la lista desplegable */
+	.navbar.responsive .navbar-links {
+	  display: block;
+	  position: absolute;
+	  width: 100%;
+	  background-color: #555;
+	  z-index: 1;
+	}
+	
+	/* Estilos para los enlaces en la lista desplegable */
+	.navbar.responsive .navbar-links a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	  padding: 14px 16px;
+	  border-bottom: 1px solid white;
+	}
+	
+	/* Estilos para el ícono cuando la barra de navegación es desplegable */
+	.navbar.responsive .icon {
 	  position: absolute;
 	  right: 0;
 	  top: 0;
 	}
-	.navbar.responsive a {
-	  float: none;
-	  display: block;
-	  text-align: left;
-	}
   }
   
+  /* Agrega un relleno inferior para el contenido principal */
+  main {
+	padding-bottom: 60px; /* Igual a la altura fija de la barra de navegación */
+  }
 .Explanations{
 	background-image: url("https://wallpaperaccess.com/full/3457485.jpg");
 	background-repeat: no-repeat;
